crates/specforge-project/tests/snapshots/tests__registry_build_snapshot__alone_greet.snap
---
source: crates/specforge-project/tests/registry_build_snapshot.rs
expression: "digest(&load(&runtime, &[\"@sdk/greet\"]))"
---
{
  "absent_reference_targets": {},
  "bidirectional_pairs": [],
  "body_parser_kinds": [],
  "check_passes": [],
  "edges": {},
  "ext_short": {
    "@sdk/greet": "greet"
  },
  "extension_info": [
    [
      "@sdk/greet",
      "0.1.0"
    ]
  ],
  "fields": {
    "greeting.style": {
      "derived_from": null,
      "description": null,
      "edge": null,
      "exempts_obligations": false,
      "field_name": "style",
      "field_type": "Enum([\"warm\", \"formal\"])",
      "file_reference": false,
      "headline": false,
      "inverse_of": null,
      "kind_name": "greeting",
      "normative": false,
      "proof_role": null,
      "required": true,
      "source_extension": "@sdk/greet",
      "target_kind": null
    }
  },
  "kinds": {
    "greeting": {
      "allowed_verify_kinds": [],
      "contract_target": false,
      "declares_types": false,
      "description": "A friendly greeting",
      "dot_color": null,
      "dot_fillcolor": null,
      "dot_shape": null,
      "has_body_parser": false,
      "kind_name": "greeting",
      "lifecycle_field": null,
      "lsp_icon": null,
      "open_fields": false,
      "semantic_token": null,
      "singleton": false,
      "source_extension": "@sdk/greet",
      "supports_verify": false,
      "testable": false
    }
  },
  "load_diagnostics": [],
  "manifest_surfaces": [
    {
      "extension": "@sdk/greet",
      "surfaces": {
        "commands": [
          {
            "args": [
              {
                "arg_type": "string",
                "default_value": null,
                "description": "Who to greet",
                "name": "name",
                "required": true
              }
            ],
            "category": null,
            "description": "Greet someone, warmly",
            "export": "cmd__hello",
            "id": "hello",
            "title": "Say hello"
          }
        ],
        "mcp_resources": [],
        "mcp_tools": []
      }
    }
  ],
  "registry_diagnostics": [],
  "rules": [
    {
      "check": "field_value_constraint",
      "code": "E901",
      "constraint": {
        "kind": "matches",
        "pattern": "^(warm|formal)$",
        "values": []
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "style",
      "message_template": "greeting '{id}' has unknown style",
      "owner": "@sdk/greet",
      "severity": "Error",
      "target_kind": "greeting",
      "wasm_function": null
    },
    {
      "check": "missing_required_field",
      "code": "E006",
      "constraint": null,
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "style",
      "message_template": "greeting '{id}' is missing required field 'style'",
      "owner": "",
      "severity": "Error",
      "target_kind": "greeting",
      "wasm_function": null
    }
  ],
  "single_reference_fields": [],
  "surface_diagnostics": [],
  "surfaces": [
    {
      "export": "cmd__hello",
      "extension": "@sdk/greet",
      "name": "hello",
      "surface_type": "Command"
    }
  ]
}
