crates/specforge-project/tests/snapshots/tests__registry_build_snapshot__alone_rust.snap
---
source: crates/specforge-project/tests/registry_build_snapshot.rs
expression: "digest(&load(&runtime, &[name]))"
---
{
  "absent_reference_targets": {},
  "bidirectional_pairs": [],
  "body_parser_kinds": [],
  "check_passes": [],
  "edges": {},
  "ext_short": {
    "@specforge/rust": "rust"
  },
  "extension_info": [
    [
      "@specforge/rust",
      "1.0.0"
    ]
  ],
  "fields": {},
  "kinds": {},
  "load_diagnostics": [
    {
      "code": "W153",
      "message": "extension '@specforge/rust': sandbox_policy.file_system_access asks for a capability the host never grants; it is ignored"
    }
  ],
  "manifest_surfaces": [],
  "registry_diagnostics": [],
  "rules": [],
  "single_reference_fields": [],
  "surface_diagnostics": [],
  "surfaces": []
}
