crates/specforge-project/tests/snapshots/tests__registry_build_snapshot__alone_testing.snap
---
source: crates/specforge-project/tests/registry_build_snapshot.rs
expression: "digest(&load(&runtime, &[name]))"
---
{
  "absent_reference_targets": {},
  "bidirectional_pairs": [],
  "body_parser_kinds": [],
  "check_passes": [],
  "edges": {},
  "ext_short": {
    "@specforge/testing": "testing"
  },
  "extension_info": [
    [
      "@specforge/testing",
      "1.0.0"
    ]
  ],
  "fields": {},
  "kinds": {},
  "load_diagnostics": [],
  "manifest_surfaces": [],
  "registry_diagnostics": [],
  "rules": [
    {
      "check": "no_verify_statements",
      "code": "W004",
      "constraint": null,
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "verify",
      "message_template": "{kind} '{id}' is testable but declares no verify obligations",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "behavior",
      "wasm_function": null
    },
    {
      "check": "no_verify_statements",
      "code": "W004",
      "constraint": null,
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "verify",
      "message_template": "{kind} '{id}' is testable but declares no verify obligations",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "invariant",
      "wasm_function": null
    },
    {
      "check": "no_verify_statements",
      "code": "W004",
      "constraint": null,
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "verify",
      "message_template": "{kind} '{id}' is testable but declares no verify obligations",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "event",
      "wasm_function": null
    },
    {
      "check": "no_verify_statements",
      "code": "W004",
      "constraint": null,
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "verify",
      "message_template": "{kind} '{id}' is testable but declares no verify obligations",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "type",
      "wasm_function": null
    },
    {
      "check": "no_verify_statements",
      "code": "W004",
      "constraint": null,
      "edge_peer_kind": null,
      "edge_type": null,
      "field": "verify",
      "message_template": "{kind} '{id}' is testable but declares no verify obligations",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "port",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "unit",
          "contract",
          "integration",
          "property",
          "performance"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "behavior",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "unit",
          "integration",
          "property",
          "performance",
          "mutation"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "invariant",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "integration",
          "unit",
          "deadlock_free",
          "liveness"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "event",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "unit",
          "property"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "type",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "integration",
          "unit"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "port",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "unit",
          "integration",
          "property",
          "load",
          "contract"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "constraint",
      "wasm_function": null
    },
    {
      "check": "verify_kind_allowlist",
      "code": "W009",
      "constraint": {
        "kind": "one_of",
        "pattern": null,
        "values": [
          "unit",
          "integration",
          "property"
        ]
      },
      "edge_peer_kind": null,
      "edge_type": null,
      "field": null,
      "message_template": "entity '{id}' has verify kind '{value}' not in allowed set {allowed}",
      "owner": "@specforge/testing",
      "severity": "Warning",
      "target_kind": "failure_mode",
      "wasm_function": null
    }
  ],
  "single_reference_fields": [],
  "surface_diagnostics": [],
  "surfaces": []
}
